<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateContactAcitivity">

    <EditText
        android:id="@+id/name4"
        android:layout_width="367dp"
        android:layout_height="49dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="16dp"
        android:hint="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/business_number_input4"
        android:layout_width="372dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="Business Number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name4" />

    <EditText
        android:id="@+id/primary_business_input4"
        android:layout_width="376dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="Primary Business"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/business_number_input4" />

    <EditText
        android:id="@+id/address_input4"
        android:layout_width="369dp"
        android:layout_height="46dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="text|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primary_business_input4" />

    <EditText
        android:id="@+id/province_territory_input4"
        android:layout_width="365dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Province/Territory"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_input4" />

    <Button
        android:id="@+id/submitButtonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:onClick="submitInfoButton"
        android:text="Create Contact"

        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province_territory_input4" />

    <TextView
        android:id="@+id/testView"
        android:layout_width="391dp"
        android:layout_height="504dp"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButtonCreate" />


</android.support.constraint.ConstraintLayout>
